refactor(security): organize request matchers in SecurityConfig